--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="/css/reset.css">
 	<script type="importmap">
     {
         "imports": {
@@ -141,6 +141,6 @@
     </label>
     </div>
 </div>
-<script src="horario-solar-input.js" type="module"></script>
+<script src="/horario_solar_input.js" type="module"></script>
 </body>
 </html>
