--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,9 @@
             <input value="98" name="efiInversor" type="text">
         </label>
     </fieldset>
-    <button type="submit">Calcular</button>
+    <div class="submit-wrapper">
+        <button type="submit">Calcular</button>
+    </div>
 </form>
 </body>
 </html>
