--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
 <solar-form>
     <form>
         <fieldset>
-            <legend>Ubicación</legend>
+            <legend>Espacio y tiempo</legend>
             <label data-suffix="°">
                 <span>Latitud</span>
                 <input value="-31.4" name="latitud" type="text">
@@ -26,7 +26,7 @@
                 <input value="-3" name="zona" type="text">
             </label>
             <label for="select">
-                <span>Huso horario</span>
+                <span>Mes</span>
                 <select name="mes" id="select">
                     <option value="0">Enero</option>
                     <option value="1">Febrero</option>
